open adc channel 2

--- a/constrains/ZJUprojects.ucf
+++ b/constrains/ZJUprojects.ucf
@@ -186,9 +186,47 @@ INST "DFF_doqB_2_inst4[5].FDCE_inst" LOC=SLICE_X89Y69 | TNM = DFFQ;
 INST "DFF_doqB_2_inst4[6].FDCE_inst" LOC=SLICE_X89Y67 | TNM = DFFQ;
 INST "DFF_doqB_2_inst4[7].FDCE_inst" LOC=SLICE_X89Y65 | TNM = DFFQ;
 #--------
-INST "ram_data_inst" TNM = RAM;
+INST "DFF_doiA_1_inst1[0].FDCE_inst" LOC=SLICE_X89Y15 | TNM = DFFI;
+INST "DFF_doiA_1_inst1[1].FDCE_inst" LOC=SLICE_X89Y13 | TNM = DFFI;
+INST "DFF_doiA_1_inst1[2].FDCE_inst" LOC=SLICE_X89Y11 | TNM = DFFI;
+INST "DFF_doiA_1_inst1[3].FDCE_inst" LOC=SLICE_X89Y9 | TNM = DFFI;
+INST "DFF_doiA_1_inst1[4].FDCE_inst" LOC=SLICE_X89Y7 | TNM = DFFI;
+INST "DFF_doiA_1_inst1[5].FDCE_inst" LOC=SLICE_X89Y5 | TNM = DFFI;
+INST "DFF_doiA_1_inst1[6].FDCE_inst" LOC=SLICE_x89y3 | TNM = DFFI;
+INST "DFF_doiA_1_inst1[7].FDCE_inst" LOC=SLICE_X89Y1 | TNM = DFFI;
+
+INST "DFF_doiA_2_inst2[0].FDCE_inst" LOC=SLICE_X89Y15 | TNM = DFFI;
+INST "DFF_doiA_2_inst2[1].FDCE_inst" LOC=SLICE_X89Y13 | TNM = DFFI;
+INST "DFF_doiA_2_inst2[2].FDCE_inst" LOC=SLICE_X89Y11 | TNM = DFFI;
+INST "DFF_doiA_2_inst2[3].FDCE_inst" LOC=SLICE_X89Y9 | TNM = DFFI;
+INST "DFF_doiA_2_inst2[4].FDCE_inst" LOC=SLICE_X89Y7 | TNM = DFFI;
+INST "DFF_doiA_2_inst2[5].FDCE_inst" LOC=SLICE_X89Y5 | TNM = DFFI;
+INST "DFF_doiA_2_inst2[6].FDCE_inst" LOC=SLICE_X89Y3 | TNM = DFFI;
+INST "DFF_doiA_2_inst2[7].FDCE_inst" LOC=SLICE_X89Y1 | TNM = DFFI;
+
+INST "DFF_doiB_1_inst3[0].FDCE_inst" LOC=SLICE_X89Y39 | TNM = DFFI;
+INST "DFF_doiB_1_inst3[1].FDCE_inst" LOC=SLICE_X89Y37 | TNM = DFFI;
+INST "DFF_doiB_1_inst3[2].FDCE_inst" LOC=SLICE_X89Y35 | TNM = DFFI;
+INST "DFF_doiB_1_inst3[3].FDCE_inst" LOC=SLICE_X89Y33 | TNM = DFFI;
+INST "DFF_doiB_1_inst3[4].FDCE_inst" LOC=SLICE_X89Y31 | TNM = DFFI;
+INST "DFF_doiB_1_inst3[5].FDCE_inst" LOC=SLICE_X89Y29 | TNM = DFFI;
+INST "DFF_doiB_1_inst3[6].FDCE_inst" LOC=SLICE_X89Y27 | TNM = DFFI;
+INST "DFF_doiB_1_inst3[7].FDCE_inst" LOC=SLICE_X89Y25 | TNM = DFFI;
+
+INST "DFF_doiB_2_inst4[0].FDCE_inst" LOC=SLICE_X89Y39 | TNM = DFFI;
+INST "DFF_doiB_2_inst4[1].FDCE_inst" LOC=SLICE_X89Y37 | TNM = DFFI;
+INST "DFF_doiB_2_inst4[2].FDCE_inst" LOC=SLICE_X89Y35 | TNM = DFFI;
+INST "DFF_doiB_2_inst4[3].FDCE_inst" LOC=SLICE_X89Y33 | TNM = DFFI;
+INST "DFF_doiB_2_inst4[4].FDCE_inst" LOC=SLICE_X89Y31 | TNM = DFFI;
+INST "DFF_doiB_2_inst4[5].FDCE_inst" LOC=SLICE_X89Y29 | TNM = DFFI;
+INST "DFF_doiB_2_inst4[6].FDCE_inst" LOC=SLICE_X89Y27 | TNM = DFFI;
+INST "DFF_doiB_2_inst4[7].FDCE_inst" LOC=SLICE_X89Y25 | TNM = DFFI;
 #--------
-TIMESPEC TS_DFFQtoRAM = FROM DFFQ TO RAM 3 ns;
+INST "ram_data_inst" TNM = RAMQ;
+INST "ram_data_inst2" TNM = RAMI;
+#--------
+TIMESPEC TS_DFFQtoRAM = FROM DFFQ TO RAMQ 3 ns;
+TIMESPEC TS_DFFQtoRAM = FROM DFFI TO RAMI 3 ns;
 #--------
 NET "PHY_GTXclk_quar" LOC= AL33;
 #TIMESPEC TS_PHY_GTXclk_quar = PERIOD "PHY_GTXclk_quar" 8 ns HIGH 50 %;
